unpackaged/main/default/objects/Account/fields/demo18th__c.field-meta.xml
<CustomField>
    <fullName>demo18th__c</fullName>
    <label>demo18th</label>
    <length>200</length>
    <type>Text</type>
</CustomField>