unpackaged/main/default/objects/Account/fields/demo_pipelines__c.field-meta.xml
<CustomField>
    <fullName>demo_pipelines__c</fullName>
    <defaultValue>false</defaultValue>
    <label>demo pipelines</label>
    <type>Checkbox</type>
</CustomField>