unpackaged/main/default/objects/Account/fields/DemoMariaTest__c.field-meta.xml
<CustomField>
    <fullName>DemoMariaTest1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DemoMariaTest1</label>
    <type>Checkbox</type>
</CustomField>