unpackaged/main/default/objects/Account/fields/Feature_A__c.field-meta.xml
<CustomField>
    <fullName>Feature_A__c</fullName>
    <label>Feature A</label>
    <length>10</length>
    <type>Text</type>
</CustomField>