unpackaged/main/default/objects/Account/fields/Pipelines__c.field-meta.xml
<CustomField>
    <fullName>Pipelines__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pipelines</label>
    <type>Checkbox</type>
</CustomField>