unpackaged/main/default/objects/Account/fields/test_what__c.field-meta.xml
<CustomField>
    <fullName>test_what__c</fullName>
    <defaultValue>false</defaultValue>
    <label>test-what</label>
    <type>Checkbox</type>
</CustomField>